@@ -3,16 +3,24 @@ package fr.iut.hev.root;
 import javafx.application.Application;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Scene;
-import javafx.scene.layout.Pane;
+import javafx.scene.image.ImageView;
+import javafx.scene.layout.StackPane;
 import javafx.stage.Stage;
 
 import java.io.IOException;
+import java.util.Objects;
 
 public class Main extends Application {
-    public Scene scene;
+    public static Scene scene;
+//--enable-native-access=javafx.graphics
     @Override
     public void start(Stage stage) throws IOException {
-        Pane root = FXMLLoader.load(Main.class.getResource("view/globalView.fxml"));
+        StackPane root = new StackPane();
+        ImageView worldBackground = FXMLLoader.load(Main.class.getResource("view/world-background.fxml"));
+        StackPane land = FXMLLoader.load(Main.class.getResource("view/Stack-background+land.fxml"));
+        ImageView player  = FXMLLoader.load(Main.class.getResource("player.fxml"));
+        root.getChildren().addAll(worldBackground, land, player);
+        //scene = new Scene(root, 1920, 1072);
         scene = new Scene(root, 1920, 1056);
         stage.setTitle("ROOT");
         stage.setScene(scene);
